--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -324,6 +324,7 @@ nav{
 }
 
 .sticky{
+    z-index: 1;
     position: fixed;
     top: 0;
     background: rgb(235, 223, 187);
@@ -383,6 +384,7 @@ footer{
 }
 
 .item-contact{
+    
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -421,6 +423,7 @@ footer{
     justify-content: space-evenly;
     margin-top: 2.5rem;
     margin-bottom: 5rem;
+    
 
 }
 
